deployments.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: accounts
  namespace: demo
spec:
  selector:
    matchLabels:
      app: accounts
  replicas: 1
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: bigmyx/accounts:latest

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: reviews
  namespace: demo
spec:
  selector:
    matchLabels:
      app: reviews
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: bigmyx/reviews:latest

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: products
  namespace: demo
spec:
  selector:
    matchLabels:
      app: products
  replicas: 1
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: bigmyx/products:latest

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: inventory
  namespace: demo
spec:
  selector:
    matchLabels:
      app: inventory
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: bigmyx/inventory:latest

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway
  namespace: demo
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: bigmyx/gateway:latest
          imagePullPolicy: Always
