ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: demo-frontend-config
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/common-name: demo.bigmyx.net
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: demo
spec:
  tls:
  - hosts:
    - demo.bigmyx.net
    secretName: demo-cert-secret
  rules:
  - host: demo.bigmyx.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: demo-nginx
            port:
              number: 80
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: gateway
            port:
              number: 4000
  defaultBackend:
    service:
      name: demo-nginx
      port:
        number: 80
